# testing-project-group-h-lsi2-2026

./: LICENSE  README.md  TEST_PLAN.md  pytest.ini  test_plan (V1).md  testing-plan.md
.github/ISSUE_TEMPLATE/: Hiring_DATE_BUG.md  bug1-security.md  rapport-de-bug.md  supp eq test.md
.github/issues/: DUPLICATE_ADRESS.md  SEC-01.md  TC-09.md  TC-11.md  TC-12.md  TC-21.md  VAL-04.md  bug1-security.md
backend/: Dockerfile  db.sqlite3  pyproject.toml
backend/app/: settings.py
backend/hr/: models.py
backend/hr/migrations/: 0002_alter_employee_team.py  0003_alter_employee_team.py  0004_alter_employee_team.py  0005_alter_employee_team.py
backend/hr/templates/hr/: add_employee.html  add_team.html  add_to_team.html  address.html  base.html  basic_info.html  contract.html  delete_employee.html  delete_team.html  employee.html  employees.html  index.html  members.html  promote.html  reset_db.html  teams.html
e2e-tests/: README.md  conftest.py  test_add_team.py
e2e-tests/models/: team_page.py
e2e-tests/tests/regression/: test_TC_09_special_characters_name.py  test_TC_21_cascade_delete.py
tp-testing-playwright-python/: (codegen) test_add_employee.py  conftest.py  instructions_seance2.md  pytest.ini  test_bug_tc21.py
tp-testing-playwright-python/models/: employee_page.py
tp-testing-playwright-python/tests/functional/: test_add_employee.py  test_add_team.py
tp-testing-playwright-python/tests/regression/: test_SEC_01_csrf_delete.py  test_TC_09_special_characters_name.py  test_TC_21_cascade_delete.py
